# themissingmanual

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CONTENTS.md  CONTRIBUTING.md  DESIGN.md  INSTRUCTIONS.md  InteractiveAnimations.md  LICENSE  LICENSE-CONTENT  MARKETING-BRIEF.md  README.md  WRITERMANUAL.md  content-backlog.md  docker-compose.yml  frameworkspath.md  guidespath.md  job-tooling-plan.md  math-logic-plan.md  nextguides.md  til.md  v2-plan.md
.github/workflows/: deploy.yml
data/aisearch/: .gitkeep
design-mock/: README.md  about.html  category.html  contribute.html  guide.html  index.html  mock.css  mock.js  reader.html  rss.html  search.html
docs/: TODO-ai-search-dedup.md  TODO-icon-font-subset.md  admin-roadmap.md  runnable-languages-roadmap.md
docs/frontend-briefs/: 2026-06-19-code-highlighting.md  2026-06-19-mermaid-rendering.md  2026-06-19-runnable-code-blocks.md  2026-06-19-search-snippets-and-suggestion.md  syntax-highlight.css
guides/async-await-and-the-event-loop/: 01-why-async-exists.md  02-the-event-loop.md  03-promises-and-async-await.md  _guide.md
guides/auth-vs-authz/: 01-authentication-vs-authorization.md  02-sessions-vs-tokens.md  03-oauth-and-sign-in-with.md
guides/automating-the-boring-stuff/: 02-shell-scripting-essentials.md
guides/bi-dashboards-that-work/: 01-what-bi-actually-is.md  02-metrics-that-inform.md
guides/big-o-without-the-math-panic/: 01-its-about-how-things-grow.md  02-the-few-you-actually-meet.md
guides/bisecting-a-bug/: 01-binary-search-thinking.md  02-git-bisect.md  03-bisecting-beyond-git.md
guides/build-and-release-basics/: 01-what-building-produces.md  02-versions-and-artifacts.md  03-environments-and-promotion.md  _guide.md
guides/caching-explained/: 01-what-a-cache-actually-is.md  _guide.md  (+2 more)
platform/: Cargo.toml
platform/core/: Cargo.toml
platform/core/examples/: syntax_css.rs
platform/core/src/: audit.rs  categories.rs  frontmatter.rs  index.rs  ingest.rs  lib.rs  links.rs  mermaid_ssr.rs  models.rs  render.rs  store.rs  tracks.rs
platform/core/tests/: real_guides.rs
platform/server/: Cargo.toml  Dockerfile  docker-entrypoint.sh
platform/server/src/: admin.rs  auth.rs  halcyon.rs  lib.rs  main.rs  routes.rs  state.rs
platform/server/tests/: api.rs
posts/: dev.to.article.md  medium.com.article.md  x.com.article.md  x.com.short-post.md
(+2831 files in other folders)
