[package]
name = "content-core"
version = "0.1.0"
edition = "2021"
authors = ["Nika Topuria"]

[lib]
name = "content_core"
path = "src/lib.rs"

[dependencies]
comrak = "0.28"
syntect = "5"
tantivy = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
walkdir = "2"
thiserror = "1"
regex = "1"

# Renders ```mermaid fences to themed SVG at ingest (no client-side mermaid.js).
# Vendored under platform/third_party (MIT + Apache-2.0); see mermaid_ssr.rs.
mermaid-to-svg = { path = "../third_party/mermaid-to-svg" }

[dev-dependencies]
tempfile = "3"
